tests/machine/x/c/group_by_multi_join.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:134:13: error: incompatible types when assigning to type ‘int’ from type ‘filteredItem’
  134 |             (filteredItem){.part = ps.part, .value = (ps.cost * ps.qty)};
      |             ^
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:140:32: error: invalid initializer
  140 |   list_filteredItem filtered = _t4;
      |                                ^~~
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:141:30: error: invalid initializer
  141 |   list_groupedItem grouped = 0;
      |                              ^
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:142:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘list_groupedItem’ [-Wformat=]
  142 |   printf("%d\n", grouped);
      |           ~^     ~~~~~~~
      |            |     |
      |            int   list_groupedItem

   1: #include <stdio.h>
